--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
+    "react-svg": "^16.3.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.13",
