--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "firebase": "^11.9.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.14.4",
+    "lucide-react": "^0.522.0",
     "next-themes": "^0.4.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
