--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.2.0",
     "firebase": "^11.9.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.14.4",
@@ -24,7 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
     "react-svg": "^16.3.0",
