--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.2.0",
+    "@vercel/analytics": "^1.5.0",
     "firebase": "^11.9.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.14.4",
